# CodeJam2020

Nesting Depth/: CMakeLists.txt
Nesting Depth/src/: nest_depth.cpp
ParentingPartnering/: CMakeLists.txt
ParentingPartnering/src/: par_part.cpp
Vestigium/: CMakeLists.txt
Vestigium/src/: CodeJam2020.cpp  CodeJam2020.h  vestigium.cpp
