# CMakeList.txt : CMake project for CodeJam2020, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Nesting Depth")

# Add source to this project's executable.
add_executable (CodeJam2020 "src/nest_depth.cpp")

# TODO: Add tests and install targets if needed.
