# CMakeList.txt : CMake project for CodeJam2020, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Parenting Partnering")

# Add source to this project's executable.
add_executable (ParPartner "src/par_part.cpp")

# TODO: Add tests and install targets if needed.
