# CMakeList.txt : CMake project for CodeJam2020, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CodeJam2020")

# Add source to this project's executable.
add_executable (CodeJam2020 "src/CodeJam2020.cpp" "src/CodeJam2020.h")

# TODO: Add tests and install targets if needed.
